Source/WebCore/page/DOMWindow.cpp
@@ -1136,7 +1136,7 @@ int DOMWindow::innerHeight() const
     
     long height = view->visibleContentRect(/* includeScrollbars */ true).height();
     InspectorInstrumentation::applyScreenHeightOverride(m_frame, &height);
-    return static_cast<int>(height / m_frame->pageZoomFactor());
+    return static_cast<int>(height / (m_frame->pageZoomFactor() * m_frame->frameScaleFactor()));
 }
 
 int DOMWindow::innerWidth() const
@@ -1150,7 +1150,7 @@ int DOMWindow::innerWidth() const
 
     long width = view->visibleContentRect(/* includeScrollbars */ true).width();
     InspectorInstrumentation::applyScreenWidthOverride(m_frame, &width);
-    return static_cast<int>(width / m_frame->pageZoomFactor());
+    return static_cast<int>(width / (m_frame->pageZoomFactor() * m_frame->frameScaleFactor()));
 }
 
 int DOMWindow::screenX() const
